compiler/testData/multiplatform/incompatibleFunctions/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:1:16: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect fun Int.plus(s: CharSequence): Int
  The 'actual' declaration: actual fun Int.plus(s: CharSequence): Int
Reason: some modifiers on 'expect' declaration are missing on the 'actual' one (infix, inline, operator)
actual fun Int.plus(s: CharSequence): Int = 0
               ^^^^
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:3:19: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect fun Double.times(x: CharArray): Unit
  The 'actual' declaration: actual fun Double.times(x: CharArray): Unit
Reason: some modifiers on 'expect' declaration are missing on the 'actual' one (infix, inline, operator)
actual fun Double.times(x: CharArray) {}
                  ^^^^^
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:5:12: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect fun f1(): Unit
  The 'actual' declaration: actual fun f1(): Unit
Reason: some modifiers on 'expect' declaration are missing on the 'actual' one (infix, inline, operator)
actual fun f1() {}
           ^^
